--- a/src/main/resources/templates/Cadastro/cadastro.html
+++ b/src/main/resources/templates/Cadastro/cadastro.html
@@ -22,49 +22,70 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-left mt-5">Mundo Senai</h1>
+    <h1 class="text-left mt-5">Cadastro</h1>
+
     <form action="/cadastro" method="post">
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_nome"><i class="fa-solid fa-user-check"></i></span>
-            <input id="nome" name="nome" type="text" class="form-control" placeholder="Nome"
-                   aria-label="nome"
-                   aria-describedby="sp_nome">
-        </div>
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_nome"><i class="fa-solid fa-user-check"></i></span>
+                    <input id="nome" name="nome" type="text" class="form-control" placeholder="Nome"
+                           aria-label="nome"
+                           aria-describedby="sp_nome">
+                </div>
+            </div>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_cpf"><i class="fa-solid fa-user-check"></i></span>
-            <input id="cpf" name="cpf" type="text" class="form-control" placeholder="CPF"
-                   aria-label="cpf"
-                   aria-describedby="sp_cpf">
-        </div>
+            <div class="col-sm-4">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_cpf"><i class="fa-solid fa-id-card"></i></span>
+                    <input id="cpf" name="cpf" type="text" class="form-control" placeholder="CPF"
+                           aria-label="cpf"
+                           aria-describedby="sp_cpf">
+                </div>
+            </div>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_telefone"><i class="fa-solid fa-user-check"></i></span>
-            <input id="telefone" name="telefone" type="text" class="form-control" placeholder="Telefone"
-                   aria-label="telefone"
-                   aria-describedby="sp_telefone">
-        </div>
+            <div class="col-sm-8">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_email"><i class="fa-solid fa-envelope"></i></span>
+                    <input id="email" name="email" type="text" class="form-control" placeholder="E-mail"
+                           aria-label="email"
+                           aria-describedby="sp_email">
+                </div>
+            </div>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_email"><i class="fa-solid fa-user-check"></i></span>
-            <input id="email" name="email" type="text" class="form-control" placeholder="E-mail"
-                   aria-label="email"
-                   aria-describedby="sp_email">
-        </div>
+            <div class="col-sm-4">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_telefone"><i class="fa-solid fa-phone"></i></span>
+                    <input id="telefone" name="telefone" type="text" class="form-control" placeholder="Telefone"
+                           aria-label="telefone"
+                           aria-describedby="sp_telefone">
+                </div>
+            </div>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_senha"><i class="fa-solid fa-user-check"></i></span>
-            <input id="senha" name="senha" type="password" class="form-control" placeholder="Senha"
-                   aria-label="senha"
-                   aria-describedby="sp_senha">
-        </div>
+            <div class="col-sm-6">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_senha"><i class="fa-solid fa-key"></i></span>
+                    <input id="senha" name="senha" type="password" class="form-control" placeholder="Senha"
+                           aria-label="senha"
+                           aria-describedby="sp_senha">
+                </div>
+            </div>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="sp_confSenha"><i class="fa-solid fa-user-check"></i></span>
-            <input id="confSenha" name="confSenha" type="password" class="form-control" placeholder="confSenha"
-                   aria-label="confSenha"
-                   aria-describedby="sp_confSenha">
+            <div class="col-sm-6">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="sp_confSenha"><i class="fa-solid fa-key"></i></span>
+                    <input id="confSenha" name="confSenha" type="password" class="form-control"
+                           placeholder="Confirme a senha"
+                           aria-label="confSenha"
+                           aria-describedby="sp_confSenha">
+                </div>
+            </div>
+
+            <div class="col-sm-12 text-right">
+                <input value="Cadastrar" type="submit" class="btn btn-primary">
+            </div>
+
         </div>
 
     </form>
